--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,23 @@
 [package]
-name = "arbitrary-int"
+name = "arbitrary-num"
 version = "1.2.7"
 edition = "2021"
-authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
-description = "Modern and lightweight implementation of u2, u3, u4, ..., u127."
+authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>", "Daniel Lehmann <danlehmannmuc@gmail.com>"]
+description = "Modern and lightweight implementation of u1, u2, ..., u127 / i2, i3, ..., i127"
 license = "MIT"
-repository = "https://github.com/danlehmann/arbitrary-int"
+repository = "https://github.com/vhdirk/arbitrary-num"
 readme = "README.md"
 keywords = ["integer", "unaligned", "misaligned"]
 categories = ["embedded", "no-std", "data-structures"]
 
 [features]
-std = []
-
-# Supports const trait implementation through const_convert and const_trait_impl. Support for those was removed
-# from more recent Rust nightlies, so this feature requires an older Rust compiler
-# (2023-04-20 is broken, 2022-11-23 works. The exact day is somewhere inbetween)
-const_convert_and_const_trait_impl = []
+std = ["num-traits/std", "serde/std"]
 
 # core::fmt::Step is currently unstable and is available on nightly behind a feature gate
 step_trait = []
 
 # Supports defmt
 defmt = ["dep:defmt"]
-
-# Supports serde
-serde = ["dep:serde"]
-
-borsh = ["dep:borsh"]
 
 schemars = ["dep:schemars", "std"]
 
@@ -37,6 +27,8 @@ defmt = { version = "0.3.8", optional = true }
 serde = { version = "1.0", optional = true, default-features = false }
 borsh = { version = "1.5.1", optional = true, features = ["unstable__schema"], default-features = false }
 schemars = { version = "0.8.21", optional = true, features = ["derive"], default-features = false }
+forward_ref_generic = "0.2.1"
+const_for = "0.1.5"
 
 [dev-dependencies]
 serde_test = "1.0"
