--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,24 +11,27 @@ keywords = ["integer", "unaligned", "misaligned"]
 categories = ["embedded", "no-std", "data-structures"]
 
 [features]
-std = ["num-traits/std", "serde/std"]
+default = ["std"]
+
+std = ["num-traits/std", "serde/std", "funty/std"]
 
 # core::fmt::Step is currently unstable and is available on nightly behind a feature gate
 step_trait = []
-
-# Supports defmt
-defmt = ["dep:defmt"]
+generic_const_exprs = []
 
 schemars = ["dep:schemars", "std"]
 
 [dependencies]
 num-traits = { version = "0.2.19", default-features = false, optional = true }
+funty = { version = "2.0.0", default-features = false, optional = true }
 defmt = { version = "0.3.8", optional = true }
 serde = { version = "1.0", optional = true, default-features = false }
 borsh = { version = "1.5.1", optional = true, features = ["unstable__schema"], default-features = false }
 schemars = { version = "0.8.21", optional = true, features = ["derive"], default-features = false }
+
 forward_ref_generic = "0.2.1"
 const_for = "0.1.5"
+seq-macro = "0.3.5"
 
 [dev-dependencies]
 serde_test = "1.0"
