--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
+  "rust-analyzer.cargo.noDefaultFeatures": true,
+
   "rust-analyzer.cargo.features": [
-    "num-traits",
-    "borsh",
-    "serde",
-    "defmt",
-    "schemars",
+    "std",
+    // "128",
+    // "num-traits",
+    // "borsh",
+    // "serde",
+    // "defmt",
+    // "schemars",
     "funty",
   ]
 }
