--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,21 @@
 [package]
-name = "arbitrary-num"
+name = "arbitrary-int"
 version = "1.2.7"
 edition = "2021"
 authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>", "Daniel Lehmann <danlehmannmuc@gmail.com>"]
 description = "Modern and lightweight implementation of u1, u2, ..., u127 / i2, i3, ..., i127"
 license = "MIT"
-repository = "https://github.com/vhdirk/arbitrary-num"
+repository = "https://github.com/vhdirk/arbitrary-int"
 readme = "README.md"
 keywords = ["integer", "unaligned", "misaligned"]
 categories = ["embedded", "no-std", "data-structures"]
 
 [features]
-default = ["std"]
+default = ["std", "128"]
 
-std = ["num-traits/std", "serde/std", "funty/std"]
+"128" = []
+std = ["num-traits?/std", "serde?/std", "funty?/std"]
+
 
 # core::fmt::Step is currently unstable and is available on nightly behind a feature gate
 step_trait = []
@@ -32,6 +34,7 @@ schemars = { version = "0.8.21", optional = true, features = ["derive"], default
 forward_ref_generic = "0.2.1"
 const_for = "0.1.5"
 seq-macro = "0.3.5"
+paste = "1.0.15"
 
 [dev-dependencies]
 serde_test = "1.0"
