--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,24 @@ categories = ["embedded", "no-std", "data-structures"]
 [features]
 default = ["std", "128"]
 
-"128" = []
+# Disable this when targeting no_std environments
 std = ["num-traits?/std", "serde?/std", "funty?/std"]
 
+# Enable types u65..u128. This might nog be available on all platforms and given the absence of
+# generic_const_exprs, introduces significant overhead
+"128" = []
+
+# Experimental support for signed types
+signed = []
 
 # core::fmt::Step is currently unstable and is available on nightly behind a feature gate
 step_trait = []
+
+# generic const expressions are incomplete and only available on nightly
+# this signigicantly reduces compile times
 generic_const_exprs = []
 
-schemars = ["dep:schemars", "std"]
+# TODO: some dependencies require the 'alloc' feature to be enabled when targeting no_std
 
 [dependencies]
 num-traits = { version = "0.2.19", default-features = false, optional = true }
@@ -32,7 +41,6 @@ borsh = { version = "1.5.1", optional = true, features = ["unstable__schema"], d
 schemars = { version = "0.8.21", optional = true, features = ["derive"], default-features = false }
 
 forward_ref_generic = "0.2.1"
-const_for = "0.1.5"
 seq-macro = "0.3.5"
 paste = "1.0.15"
 
