--- a/.github/workflows/test-funty.yml
+++ b/.github/workflows/test-funty.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --no-default-features --features generic_const_exprs
+          args: --no-default-features --features funty
