--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,10 @@ keywords = ["integer", "unaligned", "misaligned"]
 categories = ["embedded", "no-std", "data-structures"]
 
 [features]
-default = ["std", "128"]
+default = ["std"]
 
 # Disable this when targeting no_std environments
 std = ["num-traits?/std", "serde?/std", "funty?/std"]
-
-# Enable types u65..u128. This might nog be available on all platforms and given the absence of
-# generic_const_exprs, introduces significant overhead
-"128" = []
 
 # Experimental support for signed types
 signed = []
@@ -43,6 +39,7 @@ schemars = { version = "0.8.21", optional = true, features = ["derive"], default
 forward_ref_generic = "0.2.1"
 seq-macro = "0.3.5"
 paste = "1.0.15"
+typenum = "1.17.0"
 
 [dev-dependencies]
 serde_test = "1.0"
