--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
     "num-traits",
     "borsh",
     "serde",
-    // "defmt",
-    // "schemars",
+    "defmt",
+    "schemars",
     "funty",
   ],
 
